fix overflow on search bar to make it scrollable

--- a/app/ui/loggedIn/dashboardComponents/search/searchbar.module.css
+++ b/app/ui/loggedIn/dashboardComponents/search/searchbar.module.css
@@ -27,6 +27,9 @@
     padding: 5px;
     justify-self: left;
     font-family: "Rubik", sans-serif;
+    resize: none;
+    white-space: nowrap;
+    overflow-x: scroll;
     /* TODO: fix overflow */
 }
 
